--- a/NGS/HW4.ipynb
+++ b/NGS/HW4.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,6 @@
     "\n",
     "    original_align = pysam.AlignmentFile(originalFileName, \"rb\" )\n",
     "    corrected_align = pysam.AlignmentFile(correctedFileName, \"rb\" )\n",
-    "\n",
     "    mdTags = 0\n",
     "    count = 0\n",
     "\n",
@@ -63,10 +62,31 @@
     "    falselyCorrected = 0\n",
     "    correctlyUnmodified = 0\n",
     "    incorrectlyRemoved = 0\n",
+    "    mapped_to_other = 0\n",
     "\n",
     "    total=0\n",
-    "    for original_read, corrected_read in zip(original_align.fetch(), corrected_align.fetch()):\n",
+    "\n",
+    "    original_reads = list(original_align.fetch())\n",
+    "    corrected_reads = list(corrected_align.fetch())\n",
+    "    original_reads_dict = dict(map(lambda x: (x.query_name, x), original_reads))\n",
+    "    corrected_reads_dict = dict(map(lambda x: (x.query_name, x), corrected_reads))\n",
+    "\n",
+    "    read_pairs = {}\n",
+    "    for read in original_reads_dict:\n",
+    "        if(read not in corrected_reads_dict):\n",
+    "            continue\n",
+    "        read_pairs[read] = (original_reads_dict[read], corrected_reads_dict[read])\n",
+    "\n",
+    "    for original_read, corrected_read in read_pairs.values():\n",
     "        try:\n",
+    "\n",
+    "            \n",
+    "            if(not original_read.is_unmapped and not corrected_read.is_unmapped):\n",
+    "                if( abs(original_read.reference_start - corrected_read.reference_start) > original_read.query_length and abs(original_read.reference_end - corrected_read.reference_end) > original_read.query_length):\n",
+    "                    mapped_to_other+=1\n",
+    "                    continue\n",
+    "\n",
+    "\n",
     "            total+=1\n",
     "            if(original_read.cigartuples is None or original_read.cigartuples is None):\n",
     "                continue\n",
@@ -76,9 +96,6 @@
     "            corrected_aligns = corrected_read.get_aligned_pairs(matches_only = True, with_seq = True)\n",
     "\n",
     "            for original_tuple, corrected_tuple in zip(origin_aligns, corrected_aligns):\n",
-    "                if(original_tuple[0]!=corrected_tuple[0] and original_tuple[1]!=corrected_tuple[1]):\n",
-    "                    continue\n",
-    "\n",
     "                origin_base = origin_query[original_tuple[0]] #нуклеотид в исходном риде\n",
     "                corrected_base = corrected_query[corrected_tuple[0]] #нуклеотид в скорректированном риде\n",
     "                if(origin_base != original_tuple[2] and corrected_base == \"N\"):\n",
@@ -106,8 +123,29 @@
     "    df.loc[\"Correct base in raw data\", \"Error in corrected reads\"]=falselyCorrected\n",
     "    df.loc[\"Correct base in raw data\", \"Correct base in corrected reads\"]=correctlyUnmodified\n",
     "    df.loc[\"Correct base in raw data\", \"Base is absent in corrected reads\"]=incorrectlyRemoved\n",
+    "\n",
+    "    print(\"Mapped to other position: \", mapped_to_other)\n",
     "    return df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "5 is not in list",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-1dea8d9d9796>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: 5 is not in list"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -118,9 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {
     "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
      "outputPrepend",
      "outputPrepend",
      "outputPrepend",
@@ -139,17 +180,22 @@
    },
    "outputs": [
     {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Mapped to other position:  10734\n"
+    },
+    {
      "output_type": "execute_result",
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>8599</td>\n      <td>1894125</td>\n      <td>1062</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>860901</td>\n      <td>227079568</td>\n      <td>133216</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                          Error in corrected reads  \\\n-                                                    \nError in raw data                             8599   \nCorrect base in raw data                    860901   \n\n                          Correct base in corrected reads  \\\n-                                                           \nError in raw data                                 1894125   \nCorrect base in raw data                        227079568   \n\n                          Base is absent in corrected reads  \n-                                                            \nError in raw data                                      1062  \nCorrect base in raw data                             133216  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>227409</td>\n      <td>725051</td>\n      <td>47573</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>220750</td>\n      <td>121980614</td>\n      <td>24473</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                          Error in corrected reads  \\\n-                                                    \nError in raw data                           227409   \nCorrect base in raw data                    220750   \n\n                          Correct base in corrected reads  \\\n-                                                           \nError in raw data                                  725051   \nCorrect base in raw data                        121980614   \n\n                          Base is absent in corrected reads  \n-                                                            \nError in raw data                                     47573  \nCorrect base in raw data                              24473  "
      },
      "metadata": {},
-     "execution_count": 53
+     "execution_count": 35
     }
    ],
    "source": [
-    "estimateErrors(\"/mnt/d/NGS/data/HW4/original2.bam\", \"/mnt/d/NGS/data/HW4/trim2.bam\")"
+    "estimateErrors(\"/mnt/d/NGS/data/HW4/original_3.bam\", \"/mnt/d/NGS/data/HW4/trim_3.bam\")"
    ]
   },
   {
@@ -168,17 +214,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Mapped to other position:  10914\n"
+    },
     {
      "output_type": "execute_result",
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>1644</td>\n      <td>1677445</td>\n      <td>6247</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>166381</td>\n      <td>198884517</td>\n      <td>394421</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                          Error in corrected reads  \\\n-                                                    \nError in raw data                             1644   \nCorrect base in raw data                    166381   \n\n                          Correct base in corrected reads  \\\n-                                                           \nError in raw data                                 1677445   \nCorrect base in raw data                        198884517   \n\n                          Base is absent in corrected reads  \n-                                                            \nError in raw data                                      6247  \nCorrect base in raw data                             394421  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Error in corrected reads</th>\n      <th>Correct base in corrected reads</th>\n      <th>Base is absent in corrected reads</th>\n    </tr>\n    <tr>\n      <th>-</th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Error in raw data</th>\n      <td>67909</td>\n      <td>948650</td>\n      <td>18995</td>\n    </tr>\n    <tr>\n      <th>Correct base in raw data</th>\n      <td>32969</td>\n      <td>123568280</td>\n      <td>197625</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "                          Error in corrected reads  \\\n-                                                    \nError in raw data                            67909   \nCorrect base in raw data                     32969   \n\n                          Correct base in corrected reads  \\\n-                                                           \nError in raw data                                  948650   \nCorrect base in raw data                        123568280   \n\n                          Base is absent in corrected reads  \n-                                                            \nError in raw data                                     18995  \nCorrect base in raw data                             197625  "
      },
      "metadata": {},
-     "execution_count": 49
+     "execution_count": 36
     }
    ],
    "source": [
