--- a/NGS/HW3.ipynb
+++ b/NGS/HW3.ipynb
@@ -1,27 +1,4 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
- "metadata": {
-  "language_info": {
-   "name": "python",
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "version": "3.8.1-final"
-  },
-  "orig_nbformat": 2,
-  "file_extension": ".py",
-  "mimetype": "text/x-python",
-  "name": "python",
-  "npconvert_exporter": "python",
-  "pygments_lexer": "ipython3",
-  "version": 3,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
  "cells": [
   {
    "cell_type": "markdown",
@@ -34,8 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ./minimap2 -a ../../../HW3/reference.fasta ../../../HW3/pacbio_40x.fq > ../../../HW3/pacbio.sam\n",
-    " "
+    "./minimap2-2.17_x64-linux/minimap2 -x map-nt -t 8 -a reference.fasta ONT_2D\n",
+    ".fastq.gz > nanopore.sam\n",
+    "\n",
+    "./minimap2-2.17_x64-linux/minimap2 -x map-ont -t 8 -a reference.fasta ONT_2\n",
+    "D.fastq.gz > nanopore.sam"
    ]
   },
   {
@@ -43,31 +23,29 @@
    "metadata": {},
    "source": [
     "** Nanopore: ** 29565 + 0 mapped (92.09% : N/A)  \n",
-    "** PacBio: ** 48434 + 0 mapped (97.37% : N/A)\n"
+    "** PacBio: ** 51199 + 0 mapped (98.31% : N/A)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
+    "  \n",
     "def plotGenomeCoverage(fileName, avgWindow):\n",
     "    df = pd.read_csv(fileName, sep=\"\\t\", usecols=[1,2], header=None)\n",
     "    df = df.rename(columns = {1: \"genome_position\", 2: \"depth\"})\n",
     "    df_averaged = df.groupby(np.arange(len(df))//avgWindow).mean()\n",
-    "\n",
     "    df_averaged.plot(x=\"genome_position\", y=\"depth\")\n",
     "    plt.ylabel(\"Coverage\")\n",
     "    plt.xlabel(\"Genome position\")\n",
     "    plt.title(\"Genome coverage\")\n",
-    "\n",
-    "    print(f\"Среднее покрытие: {int(df.depth.mean())}\")\n",
-    "    print(f\"Доля покрытой области генома: {df.depth[df.depth>0].count()/len(df)*100}%\")"
+    "    print(\"Среднее покрытие: \", int(df.depth.mean()))\n",
+    "    print(\"Доля покрытой области генома: \", df.depth[df.depth>0].count()/len(df)*100, \"%\")"
    ]
   },
   {
@@ -161,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,27 +149,85 @@
     "\n",
     "def getSubsMatrix(referenceFileName, alignmentFileName):\n",
     "\n",
-    "    subsMatrix = np.zeros(shape =(4,4))\n",
+    "    subsMatrix = np.zeros(shape =(5,5))\n",
     "\n",
-    "    symMap = {\"A\":0,\"C\":1,\"G\":2,\"T\":3,\"a\":0,\"c\":1,\"g\":2,\"t\":3}\n",
+    "    symMap = {\"A\":0,\"C\":1,\"G\":2,\"T\":3,\"a\":0,\"c\":1,\"g\":2,\"t\":3,'-':4}\n",
     "\n",
     "    samfile = pysam.AlignmentFile(alignmentFileName, \"rb\" )\n",
     "\n",
     "    seqIo = list(SeqIO.parse(referenceFileName, \"fasta\"))\n",
-    "\n",
+    "    i = 0\n",
+    "    total_count = 0\n",
+    "    bad_count = 0\n",
     "    for pileupcolumn in samfile.pileup():\n",
+    "        pileup_error_count = 0\n",
     "        ref_pos = pileupcolumn.reference_pos\n",
     "        ref_base = seqIo[pileupcolumn.reference_id].seq[ref_pos]\n",
-    "\n",
-    "        counts = Counter(pileupcolumn.get_query_sequences())\n",
-    "        for key in counts.keys():\n",
-    "            if(key!='' and key!='N' and key!='n'):\n",
-    "                subsMatrix[symMap[key], symMap[ref_base]] += counts[key]\n",
-    "\n",
+    "        refBaseSym = symMap[ref_base]\n",
+    "        queries = pileupcolumn.get_query_sequences(add_indels = True)\n",
+    "        for query in queries:\n",
+    "            if('*' in query):\n",
+    "                subsMatrix[4, refBaseSym] += 1\n",
+    "                bad_count+=1\n",
+    "            elif('-' in query):\n",
+    "                continue\n",
+    "            elif('+' in query):\n",
+    "                for sym in query[1:]:\n",
+    "                    if(sym in symMap.keys()):\n",
+    "                        subsMatrix[symMap[sym],4] += 1\n",
+    "                        bad_count+=1\n",
+    "            else:\n",
+    "                subsMatrix[symMap[query], refBaseSym] += 1\n",
+    "                if(query.lower()!=ref_base.lower()):\n",
+    "                    bad_count+=1\n",
+    "            \n",
     "    matrix = pd.DataFrame(subsMatrix, dtype=int)\n",
-    "    matrix.index = [\"A\",\"C\",\"G\",\"T\"]\n",
-    "    matrix.columns = [\"A\",\"C\",\"G\",\"T\"]\n",
-    "    return (matrix)"
+    "    matrix.index = [\"A\",\"C\",\"G\",\"T\",'-']\n",
+    "    matrix.columns = [\"A\",\"C\",\"G\",\"T\",'-']\n",
+    "\n",
+    "    return matrix, bad_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def estimateReadsTotalLength(alignmentFileName):\n",
+    "    samfile = pysam.AlignmentFile(alignmentFileName, \"rb\" )\n",
+    "    total_length = 0\n",
+    "    for read in samfile.fetch():\n",
+    "        total_length+=read.query_alignment_length\n",
+    "    return total_length"
    ]
   },
   {
@@ -203,47 +239,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>C</th>\n      <th>G</th>\n      <th>T</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>25398681</td>\n      <td>18809</td>\n      <td>49966</td>\n      <td>16004</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>17662</td>\n      <td>26251901</td>\n      <td>13707</td>\n      <td>71669</td>\n    </tr>\n    <tr>\n      <th>G</th>\n      <td>71509</td>\n      <td>12653</td>\n      <td>26201786</td>\n      <td>17121</td>\n    </tr>\n    <tr>\n      <th>T</th>\n      <td>15743</td>\n      <td>53596</td>\n      <td>18338</td>\n      <td>25399550</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "          A         C         G         T\nA  25398681     18809     49966     16004\nC     17662  26251901     13707     71669\nG     71509     12653  26201786     17121\nT     15743     53596     18338  25399550"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 150,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [],
    "source": [
-    "getSubsMatrix(\"data/HW3/reference.fasta\", \"data/HW3/nanopore_sorted.bam\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Для PacBio:"
+    "np_matrix, bad_count = getSubsMatrix(\"/mnt/d/NGS/data/HW3/reference.fasta\", \"/mnt/d/NGS/data/HW3/nanopore_sorted.bam\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>C</th>\n      <th>G</th>\n      <th>T</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>16332623</td>\n      <td>60228</td>\n      <td>51924</td>\n      <td>50290</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>47559</td>\n      <td>17520910</td>\n      <td>56114</td>\n      <td>43517</td>\n    </tr>\n    <tr>\n      <th>G</th>\n      <td>43440</td>\n      <td>55436</td>\n      <td>17031869</td>\n      <td>46875</td>\n    </tr>\n    <tr>\n      <th>T</th>\n      <td>49673</td>\n      <td>50939</td>\n      <td>57913</td>\n      <td>15926969</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "          A         C         G         T\nA  16332623     60228     51924     50290\nC     47559  17520910     56114     43517\nG     43440     55436  17031869     46875\nT     49673     50939     57913  15926969"
+      "text/plain": "          A         C         G         T       -\nA  24961030     18809     49966     16004  193409\nC     17662  25574401     13707     71669  180206\nG     71509     12653  25740187     17121  190250\nT     15743     53596     18338  24858943  179138\n-    748805    709977    699991    748596       0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>C</th>\n      <th>G</th>\n      <th>T</th>\n      <th>-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>24961030</td>\n      <td>18809</td>\n      <td>49966</td>\n      <td>16004</td>\n      <td>193409</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>17662</td>\n      <td>25574401</td>\n      <td>13707</td>\n      <td>71669</td>\n      <td>180206</td>\n    </tr>\n    <tr>\n      <th>G</th>\n      <td>71509</td>\n      <td>12653</td>\n      <td>25740187</td>\n      <td>17121</td>\n      <td>190250</td>\n    </tr>\n    <tr>\n      <th>T</th>\n      <td>15743</td>\n      <td>53596</td>\n      <td>18338</td>\n      <td>24858943</td>\n      <td>179138</td>\n    </tr>\n    <tr>\n      <th>-</th>\n      <td>748805</td>\n      <td>709977</td>\n      <td>699991</td>\n      <td>748596</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 164
     }
    ],
    "source": [
-    "getSubsMatrix(\"data/HW3/reference.fasta\", \"data/HW3/pacbio_sorted.bam\")"
+    "np_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "NanoPore error rate:  6.3 %\n"
+    }
+   ],
+   "source": [
+    "total_length = estimateReadsTotalLength(\"/mnt/d/NGS/data/HW3/nanopore_sorted.bam\")\n",
+    "print \"NanoPore error rate: \", round(1.0*bad_count/total_length,3)*100,\"%\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "pb_matrix, bad_count = getSubsMatrix(\"/mnt/d/NGS/data/HW3/reference.fasta\", \"/mnt/d/NGS/data/HW3/pacbio_sorted.bam\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "          A         C         G         T        -\nA  14860015     60676     52398     50584  1307737\nC     47895  16178691     56438     43752  1528063\nG     43676     55743  15720226     47209  1645838\nT     50176     51433     58450  14616101  1261277\n-    313440    454538    531606    357279        0",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>C</th>\n      <th>G</th>\n      <th>T</th>\n      <th>-</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>A</th>\n      <td>14860015</td>\n      <td>60676</td>\n      <td>52398</td>\n      <td>50584</td>\n      <td>1307737</td>\n    </tr>\n    <tr>\n      <th>C</th>\n      <td>47895</td>\n      <td>16178691</td>\n      <td>56438</td>\n      <td>43752</td>\n      <td>1528063</td>\n    </tr>\n    <tr>\n      <th>G</th>\n      <td>43676</td>\n      <td>55743</td>\n      <td>15720226</td>\n      <td>47209</td>\n      <td>1645838</td>\n    </tr>\n    <tr>\n      <th>T</th>\n      <td>50176</td>\n      <td>51433</td>\n      <td>58450</td>\n      <td>14616101</td>\n      <td>1261277</td>\n    </tr>\n    <tr>\n      <th>-</th>\n      <td>313440</td>\n      <td>454538</td>\n      <td>531606</td>\n      <td>357279</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 168
+    }
+   ],
+   "source": [
+    "pb_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "PacBio error rate:  4.0 %\n"
+    }
+   ],
+   "source": [
+    "total_length = estimateReadsTotalLength(\"/mnt/d/NGS/data/HW3/pacbio_sorted.bam\")\n",
+    "print \"PacBio error rate: \", round(1.0*bad_count/total_length,3)*100,\"%\""
    ]
   },
   {
@@ -343,5 +443,28 @@
    "outputs": [],
    "source": []
   }
- ]
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python",
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "version": "3.6.7-final"
+  },
+  "orig_nbformat": 2,
+  "file_extension": ".py",
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3,
+  "kernelspec": {
+   "name": "python2",
+   "display_name": "Python 2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
